syntax = "proto3";
package heimdallv2.types;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "heimdallv2/types/hash.proto";

option go_package = "github.com/0xPolygon/heimdall-v2/x/milestone/types";

message Milestone {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = true;

  string proposer = 1 [
    (amino.dont_omitempty) = true,
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];

  uint64 start_block = 2 [ (amino.dont_omitempty) = true ];

  uint64 end_block = 3 [ (amino.dont_omitempty) = true ];

  HeimdallHash hash = 4
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  string bor_chain_i_d = 5 [ (amino.dont_omitempty) = true ];

  string milestone_i_d = 6 [ (amino.dont_omitempty) = true ];

  uint64 time_stamp = 7 [ (amino.dont_omitempty) = true ];
}

message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = true;

  uint64 min_milestone_length = 1 [ (amino.dont_omitempty) = true ];
  uint64 milestone_buffer_time = 2 [ (amino.dont_omitempty) = true ];
  uint64 milestone_buffer_length = 3 [ (amino.dont_omitempty) = true ];
  uint64 milestone_tx_confirmations = 4 [ (amino.dont_omitempty) = true ];
}
